[package]
name = "rust-csv-validator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
csv = "1.3"
regex = "1.10"

# Add web-sys with specific features enabled
[dependencies.web-sys]
version = "0.3"
features = [
  "Window",
  "Performance",
]

# Optimize for size and speed for Wasm
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1